fixed home link width on mobile

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
     text-decoration: none;
     display: flex;
     color: inherit;
+    max-width: 10em;
 }
 
 #toggler {
